--- a/aistore/apps/store/templates/product_detail.html
+++ b/aistore/apps/store/templates/product_detail.html
@@ -2,15 +2,22 @@
 {% block title %}{{ product.title }} | {% endblock %}
 {% block content %}
 <div id="productapp" class="max-w-3xl mx-auto bg-gray-900 rounded-2xl shadow-lg p-8 text-gray-200">
-     <img 
-  {% if product.image %}
-    src="{{ product.image.url }}"
-  {% else %}
-    src="/path/to/default-placeholder.jpg"
-  {% endif %}
-  alt="{{ product.title }}" 
-  class="w-full h-100 object-cover rounded-2xl mb-4">
+    
+    
+    <img :src="mainImage" class="w-full h-100 object-cover rounded-2xl mb-4">
 
+    <!-- Image Thumbnails -->
+    <div class="flex space-x-2 mb-4">
+        <div v-for="image in images" :key="image.thumbnail">
+            <img
+                :src="image.thumbnail"
+                @click="mainImage = image.image"
+                class="w-20 h-20 object-cover rounded-lg cursor-pointer border-2 border-transparent hover:border-pink-400 transition"
+                alt="Product thumbnail"
+            >
+        </div>
+    </div>
+    
     <!-- Title -->
     <h1 class="text-3xl font-bold text-white">{{ product.title }}</h1>
     
@@ -50,7 +57,9 @@ const productapp = Vue.createApp({
     store: store,
     data() {
         return {
-             notification: '' 
+             notification: '' ,
+             mainImage: '{{ product.image.url }}',
+             images: {{ productstring|safe }}
 
                 }
     },
