--- a/aistore/apps/store/templates/product_detail.html
+++ b/aistore/apps/store/templates/product_detail.html
@@ -30,18 +30,35 @@
             {{ product.description }}
         </p>
     {% endif %}
-
+    
+    {% if in_cart%}
+        <div class="flex  mt-6">
+        <a href="{% url 'cart' %}"
+           class="inline-block px-6 py-3 bg-gradient-to-r from-green-500 to-green-700 rounded-xl shadow-md text-white font-medium hover:scale-105 transform transition text-center">
+            ✅ Already in Cart &nbsp; <span class="underline font-semibold">Go to Cart</span>
+        </a>
+    </div>
+    {% else %}
+        {% if product.num_available  > 0%}
+            
+                <!-- Add to Cart Button -->
+            <div class="flex flex-row space-x-4 mt-6">
+                <button @click="addToCart({{ product.id }})"
+                class="px-6 py-3 bg-gradient-to-r from-pink-500 to-purple-600 rounded-xl shadow-md text-white font-medium hover:scale-105 transform transition">
+                🛒 Add to Cart
+                </button>
+                <button @click="buyNow({{ product.id }})"
+                    class="px-6 py-3 bg-gradient-to-r from-purple-600 to-pink-500 rounded-xl shadow-md text-white font-medium hover:scale-105 transform transition">
+                    ⚡ Buy Now
+                </button>
+            </div>
+        {% else %}
+            <p class="mt-4 text-red-500 font-semibold">Out of Stock</p>
+        {% endif %}
+    {% endif %}
     <!-- Add to Cart Button -->
     <div class="flex flex-row space-x-4 mt-6">
-        <button @click="addToCart({{ product.id }})"
-            class="px-6 py-3 bg-gradient-to-r from-pink-500 to-purple-600 rounded-xl shadow-md text-white font-medium hover:scale-105 transform transition">
-            🛒 Add to Cart
-        </button>
-        <button @click="buyNow({{ product.id }})"
-            class="px-6 py-3 bg-gradient-to-r from-purple-600 to-pink-500 rounded-xl shadow-md text-white font-medium hover:scale-105 transform transition">
-            ⚡ Buy Now
-        </button>
-    </div>
+
 
     <!-- Add this inside your main div, e.g. after the buttons -->
     <div v-if="notification" class="fixed top-20 left-1/2 transform -translate-x-1/2 bg-green-600 text-white px-6 py-3 rounded-xl shadow-lg z-50 transition">
