--- a/aistore/apps/core/templates/base.html
+++ b/aistore/apps/core/templates/base.html
@@ -89,15 +89,18 @@
         </a>
       </div>
       {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}"
-          class="block px-4 py-2 bg-gradient-to-r from-red-600 to-blue-500 text-white rounded-xl shadow-md hover:scale-105 transform transition">
-          Logout
-        </a>
-      {%else %}
-        <a href="{% url 'login' %}"
-          class="block px-4 py-2 bg-gradient-to-r from-green-600 to-blue-500 text-white rounded-xl shadow-md hover:scale-105 transform transition">
-          Login
-        </a>
+          <form action="{% url 'logout' %}" method="post" class="inline">
+              {% csrf_token %}
+              <button type="submit"
+                  class="inline-block px-4 py-2 bg-gradient-to-r from-red-600 to-blue-500 text-white rounded-xl shadow-md hover:scale-105 transform transition">
+                  Logout
+              </button>
+          </form>
+      {% else %}
+          <a href="{% url 'login' %}"
+            class="inline-block px-4 py-2 bg-gradient-to-r from-green-600 to-blue-500 text-white rounded-xl shadow-md hover:scale-105 transform transition">
+            Login
+          </a>
       {% endif %}
     </div>
   </nav>
