--- a/aistore/apps/cart/templates/cart.html
+++ b/aistore/apps/cart/templates/cart.html
@@ -65,7 +65,22 @@
                     class="px-6 py-2 bg-purple-600 text-white font-semibold rounded-lg shadow-md hover:bg-purple-700 transition">
                     Apply Coupon
                 </button>
+            
             </div>
+
+            {% if not user.is_authenticated %}
+            <div>
+                Want to order as guest or <a href="{% url 'login' %}"
+              class="inline-block px-4 py-2  shadow-md hover:scale-105 transform transition">
+              Login
+            </a>
+           /
+            <a href="{% url 'signup' %}"
+              class="inline-block px-4 py-2 shadow-md hover:scale-105 transform transition">
+              Register
+            </a>?
+            </div>
+            {% endif %}
         </div>
 
         <!-- Checkout Form -->
@@ -144,9 +159,9 @@ const productapp = Vue.createApp({
         return {
             errors: [],
             fieldErrors: {},
-            first_name: '',
-            last_name: '',
-            email: '',
+            first_name: "{{ first_name }}",
+            last_name: "{{ last_name }}",
+            email: "{{ email }}",
             address: '',
             zipcode: '',
             place: '',
@@ -273,7 +288,7 @@ const productapp = Vue.createApp({
                 } else if (product.id === product_id) {
                     alert("No more items are available in stock.");
                     return;
-                }
+                }       
             }
         },
         decrementQuantity(product_id, quantity) {
