--- a/aistore/apps/core/templates/base.html
+++ b/aistore/apps/core/templates/base.html
@@ -73,11 +73,11 @@
             🛒 Cart <span class="ml-2">([[ numItems ]])</span>
           </a>
           {% if user.is_authenticated %}
-            <form action="{% url 'logout' %}" method="post" class="inline">
+            <form action="{% url 'myaccount' %}" method="post" class="inline">
                 {% csrf_token %}
                 <button type="submit"
                     class="inline-block px-4 py-2 bg-gradient-to-r from-red-600 to-blue-500 text-white rounded-xl shadow-md hover:scale-105 transform transition">
-                    Logout
+                    My Account
                 </button>
             </form>
           {% else %}
@@ -105,11 +105,11 @@
           🛒 Cart <span>([[ numItems ]])</span>
         </a>
         {% if user.is_authenticated %}
-            <form action="{% url 'logout' %}" method="post" class="inline">
+            <form action="{% url 'myaccount' %}" method="post" class="inline">
                 {% csrf_token %}
                 <button type="submit"
                     class="inline-block px-4 py-2 bg-gradient-to-r from-red-600 to-blue-500 text-white rounded-xl shadow-md hover:scale-105 transform transition">
-                    Logout
+                    My Account
                 </button>
             </form>
         {% else %}
