--- a/aistore/apps/userprofile/templates/myaccount.html
+++ b/aistore/apps/userprofile/templates/myaccount.html
@@ -36,6 +36,7 @@
                                     <th class="px-4 py-2 text-left text-xs font-medium text-gray-400 uppercase">Product</th>
                                     <th class="px-4 py-2 text-left text-xs font-medium text-gray-400 uppercase">Quantity</th>
                                     <th class="px-4 py-2 text-left text-xs font-medium text-gray-400 uppercase">Price</th>
+                                    <th class="px-4 py-2 text-left text-xs font-medium text-gray-400 uppercase">Order Status</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -48,6 +49,7 @@
                                     </td>
                                     <td class="px-4 py-2">{{ item.quantity }}</td>
                                     <td class="px-4 py-2">{{ item.price }}৳</td>
+                                    <td class="px-4 py-2">{{ order.get_status_display }}</td>
                                 </tr>
                                 {% endfor %}
                             </tbody>
@@ -56,6 +58,7 @@
                                     <td class="px-4 py-2 font-bold">Total:</td>
                                     <td class="px-4 py-2 font-bold">{{ order.get_total_item_quantity }}</td>
                                     <td class="px-4 py-2 font-bold text-green-400">{{ order.paid_amount }}৳</td>
+                                    <td class="px-4 py-2 font-bold text-green-400"></td>
                                 </tr>
                             </tfoot>
                         </table>
