--- a/aistore/apps/userprofile/templates/myaccount.html
+++ b/aistore/apps/userprofile/templates/myaccount.html
@@ -28,7 +28,12 @@
         <ul>
             {% for order in request.user.orders.all %}
                 <li class="mb-6">
-                    <div class="font-semibold text-indigo-300 mb-1">Order #{{ order.id }} - {{ order.created_at }}</div>
+                    <div class="font-semibold text-indigo-300 mb-1">
+                        <div class="flex justify-between items-center w-full">
+                            <span>Order #{{ order.id }} - {{ order.created_at }}</span>
+                            <span class="ml-4">Order Status: {{ order.get_status_display }}</span>
+                        </div>
+                    </div>
                     <div class="overflow-x-auto">
                         <table class="min-w-full bg-gray-800 rounded-lg shadow">
                             <thead>
@@ -36,7 +41,6 @@
                                     <th class="px-4 py-2 text-left text-xs font-medium text-gray-400 uppercase">Product</th>
                                     <th class="px-4 py-2 text-left text-xs font-medium text-gray-400 uppercase">Quantity</th>
                                     <th class="px-4 py-2 text-left text-xs font-medium text-gray-400 uppercase">Price</th>
-                                    <th class="px-4 py-2 text-left text-xs font-medium text-gray-400 uppercase">Order Status</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -49,7 +53,6 @@
                                     </td>
                                     <td class="px-4 py-2">{{ item.quantity }}</td>
                                     <td class="px-4 py-2">{{ item.price }}৳</td>
-                                    <td class="px-4 py-2">{{ order.get_status_display }}</td>
                                 </tr>
                                 {% endfor %}
                             </tbody>
@@ -58,7 +61,6 @@
                                     <td class="px-4 py-2 font-bold">Total:</td>
                                     <td class="px-4 py-2 font-bold">{{ order.get_total_item_quantity }}</td>
                                     <td class="px-4 py-2 font-bold text-green-400">{{ order.paid_amount }}৳</td>
-                                    <td class="px-4 py-2 font-bold text-green-400"></td>
                                 </tr>
                             </tfoot>
                         </table>
